# emojidon

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  sync.py
emojidon/: emojidon.py
